fix: context filter polyfill no longer breaks the eraser

--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ html, body, #app {
   margin: auto;
 }
 
+ncrs-ui {
+  max-width: 1000px;
+  max-height: 670px;
+}
+
 ncrs-ui-mobile {
   max-width: 375px;
   max-height: 620px;
